welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:1: error: not found: value setColorBrosse
def marquerSol() {setColorBrosse(c:gray);baisseBrosse();leveBrosse()}
                  ^PictureMono1:1: error: not found: type gray
def marquerSol() {setColorBrosse(c:gray);baisseBrosse();leveBrosse()}
                                   ^PictureMono1:1: error: not found: value c
def marquerSol() {setColorBrosse(c:gray);baisseBrosse();leveBrosse()}
                                 ^